# H4X-0R

./: .gitignore  README.md  alembic.ini  assistant.py  blacklist.py  bot.py  crud.py  database.py  dump_file.py  func.py  handlers.py  instructions.md  keyboards.py  llm.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py  tts.py  update_instructions.py
alembic/: env.py
alembic/versions/: 04854ae183a0_create_users_table.py  1a8b5d0508cf_add_name_to_users.py  530f1d675c5e_update_tables_to_separate_id_and_.py  eb2f32f699c9_generate_initial_database_structure.py  f89132c30572_add_username_field_to_users.py  faedb3dc7b0c_update_initial_database_structure.py
crud/: __init__.py  chat.py  message.py  user.py
filters/: __init__.py
models/: __init__.py  base.py  chat.py  message.py  user.py  user_chat.py
schemas/: chat.py  message.py  user.py
